- Removed code that was marked as deprecated. - Bumped dependencies - Updated Gradle Wrapper to version 8.5